[package]
name = "ghostflow-cli for LHC-monitoring-control-system"
version = "0.1.0"
authors = ["Komeil Majidi <komeilkma@gmail.com>"]
license = "MIT/Apache-2.0"
description = """
ghostflow actions cli on LHC-monitoring-control-system.
"""
workspace = ".."
repository = "https://github.com/komeilkma/LHC-monitoring-control-system"
keywords = ["git", "workflow", "ghostflow"]
edition = "2022"

[dependencies]
clap = { version = "^3.1", features = ["cargo"] }
env_logger = "~0.9"
erased-serde = "~0.3"
ghostflow = { path = "../ghostflow" }
ghostflow-github = { path = "../ghostflow-github" }
git-checks-config = "^0.2.1"
git-checks-core = "^1.2"
git-checks = { version = "^4.2", features = ["config"] }
git-workarea = "^4.2"
itertools = "~0.10"
lazy_static = "^1.0"
log = "~0.4.4"
rayon = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "~0.8"
termcolor = "^1.0"
thiserror = "^1.0"
yaml-merge-keys = { version = "~0.5", features = ["serde_yaml"] }
